<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvFormTitleWater"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/WatServ"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/etReporterWater"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/etReporterWater"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/nameofReport"
        android:inputType="textPersonName"
        android:autofillHints="name"
        app:layout_constraintTop_toBottomOf="@id/tvFormTitleWater"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/etLocationWater" />

    <EditText
        android:id="@+id/etLocationWater"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/located"
        android:inputType="text"
        android:autofillHints="postalAddress"
        app:layout_constraintTop_toBottomOf="@id/etReporterWater"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/etDescriptionWater" />

    <EditText
        android:id="@+id/etDescriptionWater"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/descriptionIssue"
        android:inputType="textMultiLine"
        android:gravity="top"
        android:minHeight="120dp"
        android:autofillHints="description"
        app:layout_constraintTop_toBottomOf="@id/etLocationWater"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/rowDateSeverityWater" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rowDateSeverityWater"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/etDescriptionWater"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnSaveWater" >

        <ImageButton
            android:id="@+id/btnDateWater"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="@drawable/btn_round"
            android:contentDescription="@string/date_label"
            android:padding="12dp"
            app:srcCompat="@android:drawable/ic_menu_my_calendar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <Spinner
            android:id="@+id/spinnerSeverityWater"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@id/btnDateWater"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/btnDateWater"
            app:layout_constraintBottom_toBottomOf="@id/btnDateWater" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnSaveWater"
        style="@style/colorBlanco"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:text="@string/savebtn"
        android:background="@drawable/btn_round"
        app:layout_constraintTop_toBottomOf="@id/rowDateSeverityWater"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
